add cart Section  and style that

--- a/cart.html
+++ b/cart.html
@@ -24,7 +24,7 @@
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a  href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li id="lg-bag"><a class="active" href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
                 <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
             </ul>
@@ -40,6 +40,52 @@
         <h2>#cart</h2>
         <p>add your coupon &SAVEVupto 70%!</p>
 
+    </section>
+
+
+    <!-- Cart Section -->
+    <section id="cart" class="section-p1">
+        <table width="100%">
+            <thead>
+                <tr>
+                    <td>Remove</td>
+                    <td>Image</td>
+                    <td>Product</td>
+                    <td>Price</td>
+                    <td>Quantity</td>
+                    <td>Subtotal</td>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td><a href="#"> <i class="far fa-times-circle"></i> </a> </td>
+                    <td><img src="img/products/f1.jpg" alt=""></td>
+                    <td>Cartoon Astronut T-shirts</td>
+                    <td>$110.20</td>
+                    <td><input type="number" value="1"></td>
+                    <td>$110.20</td>
+                </tr>
+                <tr>
+                    <td><a href="#"> <i class="far fa-times-circle"></i> </a> </td>
+                    <td><img src="img/products/f2.jpg" alt=""></td>
+                    <td>Cartoon Astronut T-shirts</td>
+                    <td>$136.20</td>
+                    <td><input type="number" value="1"></td>
+                    <td>$136.20</td>
+                </tr>
+                <tr>
+                    <td><a href="#"> <i class="far fa-times-circle"></i> </a> </td>
+                    <td><img src="img/products/f3.jpg" alt=""></td>
+                    <td>Cartoon Astronut T-shirts</td>
+                    <td>$100.20</td>
+                    <td><input type="number" value="1"></td>
+                    <td>$100.20</td>
+                </tr>
+            </tbody>
+
+
+        </table>
     </section>
 
     <!-- Footer Section -->
