change img scr url and also some style

--- a/contact.html
+++ b/contact.html
@@ -92,17 +92,17 @@
         <div class="people">
             <div>
                 <img src="img/people/Ar.jpg" alt="" srcset="">
-                <p><span>Abdul Rahman </span>Full Stack Developer <br>Phone: +917607255678 <br>Email: contact@gmail.com
+                <p><span>Abdul Rahman </span>Full Stack Developer <br>Phone: +917607255678 <br>Email: abdulrahmans0414@gmail.com
                 </p>
             </div>
             <div>
                 <img src="img/people/Ar.jpg" alt="" srcset="">
-                <p><span>Abdul Rahman </span>Full Stack Developer <br>Phone: +917607255678 <br>Email: contact@gmail.com
+                <p><span>Abdul Rahman </span>Full Stack Developer <br>Phone: +916389070133 <br>Email: iamarsiddiqui@gmail.com
                 </p>
             </div>
             <div>
                 <img src="img/people/Ar.jpg" alt="" srcset="">
-                <p><span>Abdul Rahman </span>Full Stack Developer <br>Phone: +917607255678 <br>Email: contact@gmail.com
+                <p><span>Abdul Rahman </span>Full Stack Developer <br>Phone: +917607255678 <br>Email: ar7337495@gmail.com
                 </p>
             </div>
 
