--- a/shop.html
+++ b/shop.html
@@ -50,7 +50,7 @@
 
         <div class="pro-container">
             <div class="pro" onclick="window.location.href='sproduct.html'">
-                <img src="/img/products/f1.jpg" alt="">
+                <img src="/img/products/b10.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -69,7 +69,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/f2.jpg" alt="">
+                <img src="/img/products/b3.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -88,7 +88,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/f3.jpg" alt="">
+                <img src="/img/products/b4.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -107,7 +107,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/f4.jpg" alt="">
+                <img src="/img/products/b5.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -126,7 +126,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/f5.jpg" alt="">
+                <img src="/img/products/b6.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -145,7 +145,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/f6.jpg" alt="">
+                <img src="/img/products/b7.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -164,7 +164,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/f7.jpg" alt="">
+                <img src="/img/products/b8.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -183,160 +183,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/f8.jpg" alt="">
-
-                <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
-
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-
-            <div class="pro">
-                <img src="/img/products/n1.jpg" alt="">
-
-                <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
-
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-            <div class="pro">
-                <img src="/img/products/n2.jpg" alt="">
-
-                <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
-
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-            <div class="pro">
-                <img src="/img/products/n3.jpg" alt="">
-
-                <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
-
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-            <div class="pro">
-                <img src="/img/products/n4.jpg" alt="">
-
-                <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
-
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-            <div class="pro">
-                <img src="/img/products/n5.jpg" alt="">
-
-                <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
-
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-            <div class="pro">
-                <img src="/img/products/n6.jpg" alt="">
-
-                <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
-
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-            <div class="pro">
-                <img src="/img/products/n7.jpg" alt="">
-
-                <div class="des">
-                    <span>adidas</span>
-                    <h5> Cartoon Astronaut T-Shirts </h5>
-
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-            <div class="pro">
-                <img src="/img/products/n8.jpg" alt="">
+                <img src="/img/products/b9.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
