--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div class="pro-container">
             <div class="pro">
-                <img src="/img/products/f1.jpg" alt="">
+                <img src="/img/products/p1.jpeg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -110,7 +110,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/f2.jpg" alt="">
+                <img src="/img/products/p2.jpeg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -129,7 +129,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/f3.jpg" alt="">
+                <img src="/img/products/p3.jpeg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -148,7 +148,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/f4.jpg" alt="">
+                <img src="/img/products/p4.jpeg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -167,7 +167,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/f5.jpg" alt="">
+                <img src="/img/products/p5.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -186,7 +186,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/f6.jpg" alt="">
+                <img src="/img/products/p6.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -205,7 +205,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/f7.jpg" alt="">
+                <img src="/img/products/p7.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -224,7 +224,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/f8.jpg" alt="">
+                <img src="/img/products/p8.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -261,7 +261,7 @@
 
         <div class="pro-container">
             <div class="pro">
-                <img src="/img/products/n1.jpg" alt="">
+                <img src="/img/products/b10.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -280,7 +280,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/n2.jpg" alt="">
+                <img src="/img/products/b3.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -299,7 +299,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/n3.jpg" alt="">
+                <img src="/img/products/b4.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -318,7 +318,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/n4.jpg" alt="">
+                <img src="/img/products/b5.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -337,7 +337,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/n5.jpg" alt="">
+                <img src="/img/products/b6.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -356,7 +356,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/n6.jpg" alt="">
+                <img src="/img/products/b7.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -375,7 +375,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/n7.jpg" alt="">
+                <img src="/img/products/b8.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
@@ -394,7 +394,7 @@
                 <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
-                <img src="/img/products/n8.jpg" alt="">
+                <img src="/img/products/b9.jpg" alt="">
 
                 <div class="des">
                     <span>adidas</span>
