Change logo name and also change tilte

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Page</title>
+    <title>Graceful Garb</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <script src="script.js" defer></script>
@@ -17,7 +17,7 @@
 
     <!-- Header Section for Navbar -->
     <section id="header">
-        <a href="#" class="logo">BG-Z</a>
+        <a href="#" class="logo">G-Garb</a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
@@ -118,7 +118,7 @@
     <!-- Footer Section -->
     <footer class="section-p1">
         <div class="col">
-            <a href="#" class="logo">BG-Z</a>
+            <a href="#" class="logo">G-Garb</a>
             <h4> <strong>Contact</strong> </h4>
             <p><strong>Address:</strong> Lucknow </p>
             <p><strong>Phone:</strong> +917607255678 </p>
