--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecommerce Website</title>
+    <title>Graceful Garb</title>
 
 
     <!-- link CSS file -->
@@ -21,7 +21,7 @@
 
     <!-- Header Section for Navbar -->
     <section id="header">
-        <a href="#" class="logo">BG-Z</a>
+        <a href="#" class="logo">G-Garb</a>
         <div>
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
@@ -42,7 +42,7 @@
     <!-- Hero Section -->
     <section id="hero">
         <h4> Trade in Offer</h4>
-        <h2>The BG-Zone</h2>
+        <h2>The Graceful Garb</h2>
         <h1>On All product</h1>
         <p> Save more with coupons & up to 70% off! </p>
         <button>Shop Now</button>
@@ -465,7 +465,7 @@
     <!-- Footer Section -->
     <footer class="section-p1">
         <div class="col">
-            <a href="#" class="logo">BG-Z</a>
+            <a href="#" class="logo">G-Garb</a>
             <h4> <strong>Contact</strong> </h4>
             <p><strong>Address:</strong> Lucknow </p>
             <p><strong>Phone:</strong> +917607255678 </p>
