--- a/sproduct.html
+++ b/sproduct.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Single Shop Page</title>
+    <title>GracefulGarb</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <script src="script.js" defer></script>
@@ -17,7 +17,7 @@
 
     <!-- Header Section for Navbar -->
     <section id="header">
-        <a href="#" class="logo">BG-Z</a>
+        <a href="#" class="logo">G-Garb</a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
@@ -179,11 +179,11 @@
     <!-- Footer Section -->
     <footer class="section-p1">
         <div class="col">
-            <a href="#" class="logo">BG-Z</a>
+            <a href="#" class="logo">G-Garb</a>
             <h4> <strong>Contact</strong> </h4>
             <p><strong>Address:</strong> Lucknow </p>
             <p><strong>Phone:</strong> +917607255678 </p>
-            <p><strong>Hours:</strong> 10:00 -18:00, Mon - Sat</p>
+            <p><strong>Hours:</strong> 10 - 18:00, Mon - Sat</p>
             <div class="follow">
                 <h4>follow us</h4>
                 <div class="icon">
